--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
+    "@nestjs/typeorm": "^5.2.2",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
+    "typeorm": "^0.2.7",
     "typescript": "^3.0.1"
   },
   "devDependencies": {
